--- a/assets/index.css
+++ b/assets/index.css
@@ -28,6 +28,7 @@
   text-align: center;
   font-weight: bolder;
   transition: all .3s linear;
+  cursor: pointer;
 }
 .start.start-blue {
   color: #09f;
@@ -47,6 +48,7 @@
   font-weight: bolder;
   color:#fff;
   display: none;
+  z-index: 2;
 }
 .mask {
   position: absolute;
@@ -57,6 +59,7 @@
   opacity: .7;
   background-color: #000;
   display: none;
+  z-index: 2;
 }
 
 .end {
@@ -66,6 +69,7 @@
   transform: translateX(-50%);
   text-align: center;
   display: none;
+  z-index: 4;
 }
 .end .over {
   font-size: 36px;
@@ -78,13 +82,16 @@
   color: #ff0;
   font-size: 20px;
   font-weight: bold;
+  z-index: 3;
 }
 /* 排行榜 列表 */
 .end .rank-item {
   height: 30px;
   line-height: 30px;
-  margin-bottom: 10px;
+  margin-top: 10px;
   font-size: 12px;
+  color: #09f;
+  
 }
 .end .rank-degree {
   display: inline-block;
@@ -94,6 +101,7 @@
   line-height: 14px;
   color:#fff;
   background-color:#8eb9f5;
+  
 
 }
 .end .rank-degree.first {
@@ -109,10 +117,14 @@
   display: inline-block;
   width: 30px;
 } 
+
+
+
 .end .restart {
   color: #09f;
   font-weight: bolder;
   cursor: pointer;
+  margin-top: 10px;
 }
 .pipe {
   position: absolute;
